--- a/style.css
+++ b/style.css
@@ -3,7 +3,13 @@
     font-size: 50px;
     color: black;
     text-align: center;
-    background-color: bisque; 
+    background-color: bisque;
+    width: fit-content;
+    padding: 10px;
+    margin: auto;
+    margin-top: 10px;
+    border-radius: 20px;
+    border: 2px solid black;
     }   
     
 *{
@@ -54,7 +60,7 @@ body {
     color: black;
     border-radius: 1rem;
     border: none;
-    border: 2px solid yellow;
+    border: 5px double black;
 
 }
 
@@ -88,8 +94,13 @@ body {
     background-color: orange;
     color:white;
     border-radius: 1rem;
-    border: none;
+    
+   border: 5px double black;
 
+}
+#colour-code{
+color: white;
+margin-bottom: 30px;
 }
 
 
